v10/fixtures/ast/errors/struct_destructure_mismatch/source.able
struct Pair { i32, i32 }
p := Pair { 1, 2 }
Pair { a } := p
